can add tasks with admin

--- a/tasks/templates/tasks/project_form.html
+++ b/tasks/templates/tasks/project_form.html
@@ -2,5 +2,5 @@
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Créer</button>
+    <button type="submit">Créer une tâche</button>
 </form>
