wip ui fonction

--- a/tasks/templates/tasks/project_detail.html
+++ b/tasks/templates/tasks/project_detail.html
@@ -10,5 +10,6 @@
     {% endfor %}
 </ul>
 
-<a href="{% url 'task_create' pk=project.id %}">Ajouter une tâche</a>
+<a href="{% url 'add_task' project.id %}">Ajouter une tâche</a>
+
 
