--- a/tasks/templates/tasks/add_task.html
+++ b/tasks/templates/tasks/add_task.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h2>Ajouter une tâche au projet "{{ project.name }}"</h2>
+  <h1>Ajouter une tâche au projet : {{ project.name }}</h1>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Ajouter</button>
+    <button type="submit">Enregistrer</button>
   </form>
-  <a href="{% url 'project_detail' project.id %}">Retour au projet</a>
+  <a href="{% url 'project_detail' pk=project.id %}">Retour au projet</a>
 {% endblock %}
+
