--- a/tasks/templates/tasks/project_list.html
+++ b/tasks/templates/tasks/project_list.html
@@ -3,8 +3,12 @@
 <ul>
     {% for project in projects %}
         <li>
-            <h2>{{ project.name }}</h2>
+            <h2>
+                <a href="{% url 'project_detail' pk=project.id %}">{{ project.name }}</a>
+
+            </h2>
             <p>{{ project.description }}</p>
+
             <ul>
                 {% for task in project.tasks_list %}
                     <li>{{ task.name }} - {{ task.description }}</li>
@@ -12,6 +16,8 @@
                     <li>Aucune tâche pour ce projet.</li>
                 {% endfor %}
             </ul>
+
+            <a href="{% url 'task_create' pk=project.id %}">Ajouter une tâche</a>
         </li>
     {% endfor %}
 </ul>
